# audible-scraper

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  release.yml
src/: audio_book.rs  builder.rs  fetch_result.rs  lib.rs  main.rs  page_result.rs  params.rs  scraper.rs  scrapper.rs  utils.rs
test_data/: result_first_page.html  result_last_page.html
