[package]
name = "audible-scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.21.0"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5.3", features = ["serde"] }
regex = "1.11.1"
chrono = { version = "0.4.38", features = ["serde"] }
html-escape = "0.2.13"
clap = { version = "4.5.20", features = ["derive"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
csv = "1.3.0"
